Fix loading of textures in presets with invalid MD5 tag

Some of our presets have invalid MD5 tag saved for the textures. It
could happen due to the fact that they used resource->md5() when saving,
but saveToDevice() changed the actual MD5.

This patch is the first stage of the proposal in this task:

Ref https://phabricator.kde.org/T14946

BUG:443629